<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/random"
        android:checkable="false"
        android:title="@string/random" />
    <item
        android:id="@+id/oddRandom"
        android:checkable="false"
        android:title="@string/random_odd" />
    <item
        android:id="@+id/evenRandom"
        android:checkable="false"
        android:title="@string/random_even" />
    <item
        android:id="@+id/notAppear5WeeksRandom"
        android:checkable="false"
        android:title="@string/random_5week" />
    <item
        android:id="@+id/notAppear8WeeksRandom"
        android:title="@string/random_8week" />
    <item
        android:id="@+id/notAppear10WeeksRandom"
        android:checkable="false"
        android:title="@string/random_10week" />
    <item
        android:id="@+id/notAppear15WeeksRandom"
        android:checkable="false"
        android:title="@string/random_15week" />
    <item
        android:id="@+id/maxAppearNum"
        android:checkable="false"
        android:title="@string/random_max" />
    <item
        android:id="@+id/minAppearNum"
        android:checkable="false"
        android:title="@string/random_min" />
</menu>